# app/Http/Requests/SongCreateRequest.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class SongCreateRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'genre_id' => ['required', 'integer', 'exists:genres,id'],
+            'performer_id' => ['required', 'integer', 'exists:performers,id'],
+            'disk_id' => ['required', 'integer', 'exists:discography,id'],
+            'name' => ['required', 'string'],
+            'year' => ['required', 'integer'],
+            'status' => ['required', 'string', 'in:public,private'],
+            'song' => ['required', 'file', 'mimes:mp3,wav,flac'],
+        ];
+    }
+}
