# routes/api.php
@@ -1,6 +1,6 @@
 <?php
 
-use App\Http\Controllers\Site\PerformerSiteController;
+use App\Http\Controllers\Api\PerformersController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\ArticleController;
 use App\Http\Controllers\Api\SongsController;
@@ -8,5 +8,5 @@ use App\Http\Controllers\Api\SongsController;
 Route::prefix('v1')
     ->group(function () {
         Route::apiResource('songs', SongsController::class);
-        Route::apiResource('performers', PerformerSiteController::class);
+        Route::apiResource('performers', PerformersController::class);
     });
